force-app/main/default/objects/EYI_Survey_Response_Link__c/EYI_Survey_Response_Link__c.object-meta.xml
<CustomObject>
    <label>Survey Response Link</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Survey Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Response Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>