force-app/main/default/objects/EYI_Survey_Response_Link__c/fields/EYI_Case__c.field-meta.xml
<CustomField>
    <fullName>EYI_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Survey Response Links</relationshipLabel>
    <relationshipName>Survey_Response_Links</relationshipName>
    <type>Lookup</type>
</CustomField>