force-app/main/default/objects/EYI_Survey_Response_Link__c/fields/EYI_REC_Account__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>REC Account</label>
    <referenceTo>EYI_REC__c</referenceTo>
    <relationshipLabel>Survey Response Links</relationshipLabel>
    <relationshipName>Survey_Response_Links</relationshipName>
    <type>Lookup</type>
</CustomField>