force-app/main/default/objects/EYI_Survey_Response_Link__c/fields/EYI_Survey_Response__c.field-meta.xml
<CustomField>
    <fullName>EYI_Survey_Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Response</label>
    <referenceTo>SurveyResponse</referenceTo>
    <relationshipLabel>Survey Response Links</relationshipLabel>
    <relationshipName>Survey_Response_Links</relationshipName>
    <type>Lookup</type>
</CustomField>